# model-config-tests

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  exp_test_helper.py  pyproject.toml  test_access_om2_config.py  test_bit_reproducibility.py  test_config.py  util.py
.github/workflows/: CD.yml  CI.yml  config-comment-repro.yml  config-comment-test.yml  config-pr-1-ci.yml  config-pr-2-confirm.yml  config-pr-3-bump-tag.yml  config-schedule-1-ci.yml  config-schedule-2-start.yml  generate-checksums.yml  inputs-remote-copy.yml  test-repro.yml
models/: accessom2.py  accessom3.py  model.py
src/model_config_tests/: __main__.py  _version.py  config_tests_cmd.py  conftest.py  exp_test_helper.py  test_access_esm1p5_config.py  test_access_om2_config.py  test_access_om3_config.py  test_bit_reproducibility.py  test_config.py  util.py
test/: test_model_extract_checksums.py
test/resources/: access-om3-checksums-1-0-0.json
tests/: common.py  conftest.py  test_access_om2_extract_checksums.py  test_exp_test_helper.py  test_model_extract_checksums.py  test_test_access_esm1p5_config.py  test_test_access_om2_config.py  test_test_bit_reprodubility.py  test_test_bit_reproducibility.py  test_test_config.py
tests/compare_exp_tests/: test_setup.py  test_test_repro.py
tests/config_tests/: test_model_check_checksums_over_restarts.py  test_model_extract_checksums.py  test_test_bit_reproducibility.py
tests/qa/: test_test_access_esm1p5_config.py  test_test_access_esm1p6_config.py  test_test_access_om2_config.py  test_test_access_om3_config.py  (+1 more)
(+69 files in other folders)
